--- a/package.json
+++ b/package.json
@@ -19,18 +19,27 @@
 	},
 	"dependencies": {
 		"@mediapipe/tasks-vision": "^0.10.12",
+		"@radix-ui/react-icons": "^1.3.2",
+		"@radix-ui/react-slot": "^1.2.3",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"framer-motion": "^11.0.22",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-webcam": "^7.2.0"
+		"react-webcam": "^7.2.0",
+		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.6.3",
+		"@types/node": "^24.5.2",
 		"@types/react": "^18.2.73",
 		"@types/react-dom": "^18.2.22",
 		"@typescript-eslint/eslint-plugin": "^7.4.0",
 		"@typescript-eslint/parser": "^7.4.0",
 		"@vitejs/plugin-react-swc": "^3.6.0",
+		"autoprefixer": "^10.4.21",
+		"postcss": "^8.5.6",
+		"tailwindcss": "^3.4.17",
 		"typescript": "^5.4.3",
 		"vite": "^5.2.6"
 	}
