--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.0.22",
+		"lucide-react": "^0.544.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-webcam": "^7.2.0",
